clusters/homelab/apps/victoria-logs/rm-http-route.yaml
$patch: delete
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: victoria-logs
  namespace: monitoring
