clusters/homelab/apps/victoria-logs/victoria-logs-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: victoria-logs
spec:
  parentRefs:
    - name: internal
      namespace: envoy-gateway-system
  hostnames:
    - vmlogs.${cluster_subdomain}
  rules:
    - backendRefs:
        - name: vls-victoria-logs-single-server
          port: 9428
